--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "full-stack-project",
   "version": "1.0.0",
   "description": "a backend for - youtube",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ndemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -14,5 +15,8 @@
     "sriraj"
   ],
   "author": "sruraj-Developer",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
