--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "sruraj-Developer",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
